<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textview_instructions_body_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/text_instructions_body_1" />
    
    <TextView
        android:id="@+id/textview_instructions_body_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/text_instructions_body_2" />
    
    <TextView
        android:id="@+id/textview_instructions_body_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/text_instructions_body_3" />
    
    <TextView
        android:id="@+id/textview_instructions_body_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/text_instructions_body_4" />
    
    <TextView
        android:id="@+id/textview_instructions_body_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/text_instructions_body_5" />
    
</LinearLayout>
