<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:gravity="center"
    android:orientation="vertical" >
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="vertical" >
	    
	    <TextView
	        android:id="@+id/textview_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:layout_marginTop="30dp"
	        android:textSize="30sp"
	        android:text="@string/text_game_title" />
	    
	</LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="vertical" >
    
	    <Button
	        android:id="@+id/button_instructions"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/button_instructions"
	        android:onClick="openActivity" />
	    
	    <Button
	        android:id="@+id/button_profile"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/button_profile"
	        android:onClick="openActivity" />
	    
	    <Button
	        android:id="@+id/button_game"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/button_game"
	        android:onClick="openActivity" />

    </LinearLayout>
</LinearLayout>
