<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical" >
	
    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_weight="3"
	    android:gravity="center"
	    android:orientation="vertical">
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:textSize="17sp"
	        android:layout_margin="5dp"
	        android:text="@string/text_profile_commander" />
        
        <TextView
            android:id="@+id/text_profile_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_margin="5dp"
	        android:textSize="30sp"
	        android:text="@string/text_profile_name" />

        <RatingBar
            android:id="@+id/ratingBar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"          
            android:numStars="5"
            android:rating="2"
            android:isIndicator="true"
            android:scaleX="0.5"
            android:scaleY="0.5" />
        
    </LinearLayout>

    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_weight="5"
	    android:orientation="vertical">
        
        <LinearLayout
            android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:gravity="start"
                android:text="@string/text_profile_total_coins_label" />

            <TextView
                android:id="@+id/text_profile_total_coins"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="end"
                android:textSize="15sp"
                android:text="345" />
            
        </LinearLayout>
        
        <ProgressBar
	        android:id="@+id/progressbar_total_coins"
	        style="?android:attr/progressBarStyleHorizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:max="1000"
	        android:progress="345"/>
	</LinearLayout>
	
    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_weight="5"
	    android:orientation="vertical">
        
        <LinearLayout
            android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="15sp"
                android:text="@string/text_profile_most_coins_label" />

            <TextView
                android:id="@+id/text_profile_total_coins_progress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="end"
                android:textSize="15sp"
                android:text="54" />
            
        </LinearLayout>
        
        <ProgressBar
	        android:id="@+id/progressbar_most_coins"
	        style="?android:attr/progressBarStyleHorizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:max="100"
	        android:progress="54"/>
	</LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_weight="5"
	    android:orientation="vertical">
        
        <LinearLayout
            android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="15sp"
                android:text="@string/text_profile_max_level_label" />

            <TextView
                android:id="@+id/text_profile_max_level"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="end"
                android:textSize="15sp"
                android:text="9" />
            
        </LinearLayout>
        
        <ProgressBar
	        android:id="@+id/progressbar_max_level"
	        style="?android:attr/progressBarStyleHorizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:max="10"
	        android:progress="9"/>
	</LinearLayout>
	
    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_weight="4"
	    android:orientation="vertical">
	     
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/text_profile_skin" />
        
		<HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            
	        <LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="5dp"
	            android:orientation="horizontal" >
	
	            <ImageView
	                android:layout_width="70dp"
	                android:layout_height="70dp"
	                android:layout_margin="5dp"
	                android:contentDescription="@string/text_profile_skin"
	                android:src="@drawable/tank_right" />
	            
	            <ImageView
	                android:layout_width="70dp"
	                android:layout_height="70dp"
	                android:layout_margin="5dp"
	                android:contentDescription="@string/text_profile_skin"
	                android:src="@drawable/tank_right" />
	            
	            <ImageView
	                android:layout_width="70dp"
	                android:layout_height="70dp"
	                android:layout_margin="5dp"
	                android:contentDescription="@string/text_profile_skin"
	                android:src="@drawable/tank_right" />
	            
	            <ImageView
	                android:layout_width="70dp"
	                android:layout_height="70dp"
	                android:layout_margin="5dp"
	                android:contentDescription="@string/text_profile_skin"
	                android:src="@drawable/tank_right" />
	            
	            <ImageView
	                android:layout_width="70dp"
	                android:layout_height="70dp"
	                android:layout_margin="5dp"
	                android:contentDescription="@string/text_profile_skin"
	                android:src="@drawable/tank_right" />
	            
	        </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>

</LinearLayout>
